# assembler_labs

./: README.md
lab1/: a.out  lab  lab1  lab1.asm  lab1.s
lab2/: Makefile  lab2  lab2.s
lab3/: Makefile  in.txt  lab3  lab3.s
lab4/: Makefile  lab4.s
lab5/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt:Zone.Identifier  Makefile  Makefile:Zone.Identifier  cmake_install.cmake  jpegedge  jpegedge.c  jpegedge.c:Zone.Identifier  lab  lab5.s  makefile  test  test.c  test.h
